--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.1",
+    "heapdump": "^0.3.7",
     "istanbul": "^0.4.4",
     "jsdoc-to-markdown": "^2.0.1",
     "mocha": "^3.1.1",
